# mcp-chatwithtools

./: .gitignore  AGENT.md  CLAUDE.md  LICENSE  README.md  chatwithtools.py  get_mcp_tools.py  mcp.json  pyproject.toml  server.py  write_readme.py
.claude/skills/get-weather/: SKILL.md
.github/agents/: weather.agent.md
.github/prompts/: get-weather.prompt.md
