[project]
name = "mcp-course"
version = "0.1.0"
description = "Learning project demonstrating Model Context Protocol integration with OpenAI chat applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "gradio[mcp]>=5.34.0",
    "openai>=2.14.0",
]
