[project]
name = "mcp-course"
version = "0.1.0"
description = "Learning project demonstrating Model Context Protocol integration with OpenAI chat applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "mcp>=1.9.3",
    "openai>=2.14.0",
    "python-dotenv>=1.0.0",
]
